# MusicPlayer

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: encSecKey.html  encSecKey.js
app/src/main/assets/crypto-js/: index.js
app/src/main/cpp/: CMakeLists.txt  music-helper.cpp
app/src/main/cpp/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
app/src/main/cpp/include/ffmpeg/libavutil/: ffversion.h
app/src/main/java/com/aliyunm/musicplayer/: LiveArrayList.kt  MusicApplication.kt
app/src/main/res/anim/: music_cover_rotate.xml  popup_enter.xml  popup_exit.xml
app/src/main/res/drawable/: bg_edittext.xml  bg_nav_discover.xml  bg_nav_follow.xml  bg_nav_mine.xml  bg_player_bottom.xml  bg_popup_music_list.xml  bg_setting_save.xml  ic_add.xml  ic_add_xx.xml  ic_back.xml  ic_clear.xml  ic_close_1.xml  ic_close_2.xml  ic_cycle_list.xml  ic_cycle_random.xml  ic_cycle_single.xml  ic_dark.xml  ic_edit.xml  ic_launcher_foreground.xml  ic_light.xml  ic_logo.xml  ic_logo_normal.xml  ic_menu.xml  ic_move_up.xml  ic_nav_discover.xml  ic_nav_discover_selected.xml  ic_nav_follow.xml  ic_nav_follow_selected.xml  ic_nav_mine.xml  ic_nav_mine_selected.xml  ic_next.xml  ic_pause.xml  ic_pause_circle.xml  ic_play.xml  ic_play_circle.xml  ic_player_next.xml  ic_player_pause.xml  ic_player_pause_1.xml  ic_player_play.xml  ic_player_play_1.xml  (+7 more)
app/src/main/res/layout/: activity_main.xml  activity_player.xml  activity_search.xml  activity_setting.xml  fragment_discover.xml  fragment_follow.xml  fragment_head.xml  fragment_mine.xml  fragment_player_bottom.xml  item_music_list.xml  item_music_player_bottom.xml  item_search_music_list.xml  popup_music_list.xml  popup_player.xml  settings_activity.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: colors.xml  dimens.xml  ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: root_preferences.xml
common/: build.gradle
common/src/main/java/com/aliyunm/common/: CommonApplication.kt  CommonViewModel.kt  Ext.kt
gradle/wrapper/: gradle-wrapper.properties
preference/: build.gradle
preference/src/androidTest/java/com/aliyunm/preference/: ExampleInstrumentedTest.kt
preference/src/main/: AndroidManifest.xml
preference/src/main/java/com/aliyunm/preference/: AndroidResources.java  CheckBoxPreference.java  DialogPreference.java  DropDownPreference.java  EditTextPreference.java  EditTextPreferenceDialogFragment.java  EditTextPreferenceDialogFragmentCompat.java  ExpandButton.java  ListPreference.java  ListPreferenceDialogFragment.java  MultiSelectListPreference.java  (+25 more)
preference/src/main/res/drawable/: bg_setting_item_footer.xml  bg_setting_item_header.xml  bg_setting_item_normal.xml  ic_arrow_down_24dp.xml
preference/src/main/res/layout/: preference.xml  preference_widget_seekbar_material.xml
preference/src/main/res/values/: values.xml
renderscript-toolkit/: build.gradle
(+79 files in other folders)
